reflector code and add notification
