# src/modules/led/dtos/led-update-mode.dto.ts
@@ -1,0 +1,11 @@
+import { IsBoolean, IsNotEmpty, IsString } from 'class-validator';
+
+export class LedUpdateModeDTO {
+  @IsNotEmpty()
+  @IsString()
+  ledId: string;
+
+  @IsNotEmpty()
+  @IsBoolean()
+  status: boolean;
+}
