# src/modules/notification/dtos/notification.dto.ts
@@ -1,0 +1,16 @@
+import { ApiProperty } from '@nestjs/swagger';
+import { IsNotEmpty, IsString } from 'class-validator';
+
+export class NotificationDTO {
+  @ApiProperty()
+  @IsString()
+  title: string;
+
+  @ApiProperty()
+  @IsString()
+  ledId: string;
+
+  @ApiProperty()
+  @IsString()
+  event: string;
+}
